--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,9 +20,7 @@
 
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true,
-
-    "baseUrl": "."
+    "sourceMap": true
   },
-  "include": ["src", "examples"]
+  "include": ["src", "examples", "tests"]
 }
